# clauders

./: .gitignore  Cargo.toml  README.md
examples/: conversation.rs  file_summariser.rs  network_report.rs  sentiment_analysis.rs
src/: agent.rs  client.rs  conversation.rs  error.rs  handler.rs  lib.rs  mcp_server.rs  model.rs  options.rs  permissions.rs  response.rs  tool.rs  tool_input.rs  transport.rs  util.rs
src/hooks/: mod.rs  post_tool_use.rs  pre_tool_use.rs  stop.rs  user_prompt_submit.rs
src/proto/: content_block.rs  control.rs  incoming.rs  message.rs  mod.rs
