[package]
name = "clauders"
authors = ["Sam L. Thomas <s@ghost.sh>"]
version = "0.1.0"
edition = "2024"
description = "Rust bindings for Claude Code CLI"
license = "MIT"
repository = "https://github.com/xorpse/clauders"
keywords = ["claude", "ai", "anthropic", "cli"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
derive_builder = "0.20"
futures = "0.3"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "file_summariser"
path = "examples/file_summariser.rs"

[[example]]
name = "network_report"
path = "examples/network_report.rs"

[[example]]
name = "sentiment_analysis"
path = "examples/sentiment_analysis.rs"
